Changes since version 2.1.2
---------------------------

- Fixed a race condition with the object adapter holding state.

- Changed the way servant locators work if a server has a servant
  locator registered for a specific category, in addition to a default
  servant locator. Previously, if the locator for the specific category
  failed to locate the servant, the run time would then call the default
  locator. With the new behavior, if the locator for the specific category
  does not return a servant, the default locator is not called.

- Added proxy methods to retrieve the proxy adapter id and endpoints
  (ice_getAdapterId() and ice_getEndpoints()) and to create a new
  proxy with a new adapter id or new endpoints (ice_newAdapterId() and
  ice_newEndpoints()).

- Added Slice Ice::Endpoint local interface in slice/Ice/Endpoint.ice.

- Fixed a bug that would cause UDP server connections to be closed on
  transient errors, thus preventing the reception of any more UDP messages
  until a server restart.

- Communicator::setDefaultContext no longer changes the context
  information set on existing proxies.

- slice2cpp and slice2freeze now provide the --add-header option. It adds a
  #include directive for the specified header at the beginning of the generated
  source file. For example:

      slice2cpp --add-header=precompiled.h x.ice

  adds "#include <precompiled.h> to the beginning of x.cpp (before any other
  include directives).

  You can specify an optional guard, for example:

      slice2cpp --add-header=precompiled.h,__PRECOMPILED_H__ x.ice

  With this, the beginning of x.cpp contains:

      #ifndef __PRECOMPILED_H__
      #define __PRECOMPILED_H__
      #include <precompiled.h>
      #endif

  You can repeat the --add-header option to include several headers
  in the generated source.

- Ice::Communicator::createObjectAdapter() throws
  Ice::AlreadyRegisteredException if it is called with the name of an
  object adapter that already exists.
