@@ -56,6 +56,16 @@ IceStorm.Trace.Subscriber=1
 IceStorm.Trace.Flush=1
 
 #
+# Network Tracing
+#
+# 0 = no network tracing
+# 1 = trace connection establishment and closure
+# 2 = like 1, but more detailed
+# 3 = like 2, but also trace data transfer
+#
+Ice.Trace.Network=0
+
+#
 # Amount of time in milliseconds between flushes for batch mode
 # transfer. The minimum allowable value is 100ms.
 #
